# atlanhack

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEBASE_OVERVIEW.md  Dockerfile  Dockerfile.Argo  Dockerfile.tmpl  Makefile  README.md  entrypoint.sh  main.py  porter.yaml  pyproject.toml  scalene.json  supervisord.conf  test_connection.py
.cursor/rules/: application-workflow.mdc  database-connections.mdc  development-workflow.mdc  documentation-guidelines.mdc  documentation.mdc  extending-for-new-database.mdc  metadata-extraction.mdc  new-sql-app.mdc  observability.mdc  project-structure.mdc  setup.mdc  standards.mdc  transformer-architecture.mdc
.github/: pull_request_template.md
.github/scripts/: cleanup_scalene.py  registry-login.sh
.github/workflows/: build-image-argo.yaml  build-image.yaml  chart-release-dispatcher.yaml  checks.yml  commits.yaml  docstring-coverage.yaml  e2e-integration-test.yaml  e2e-test-1m.yaml  e2e-test-new.yaml  e2e-test.yaml  github-action-pr-label-checker.yaml  github-action-pr-label.yaml  porter-bundle-cnab.yaml  porter-bundle-cnab.yaml.disabled  stale.yml  trivy.yml  unit-tests.yml
app/: activities.py  config.py  const.py  postgres_workflow_builder.py  preflight.py  worker.py  workflow.py
app/activities/metadata_extraction/: postgres.py
app/clients/: .prestooo  __init__.py
app/common/: converter.py  schema.py  utils.py
app/dto/: credentials.py  preflight.py  response.py  workflow.py
app/handlers/: __init__.py
app/interfaces/: platform.py  preflight.py  workflow.py
app/models/: credentials.py  preflight.py  response.py  schema.py  workflow.py
app/platform/: __init__.py  dapr.py  interface.py
app/queries/: column_extraction_temp_table_regex.sql  filter_metadata.sql  tables_check.sql
app/routers/: preflight.py  workflow.py
app/sql/: client_version.sql  column_extraction.sql  extract_column.sql  extract_database.sql  extract_procedure.sql  extract_schema.sql  extract_table.sql  extract_temp_table_regex_column.sql  extract_temp_table_regex_table.sql  filter_metadata.sql  procedure_extraction.sql  schema_extraction.sql  table_extraction_temp_table_regex.sql  tables_check.sql  test_authentication.sql
app/transformers/atlas/: __init__.py
app/workflow/: activities.py  workflow.py
app/workflows/metadata_extraction/: postgres.py
dapr/: README.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MAC.md  QUICK_START.md  SETUP_MAC.md
docs/scripts/: setup_mac.sh
docs/setup/: LINUX.md  MAC.md  WINDOWS.md
frontend/: .npmrc  README.md  app.vue  generate-and-copy.js  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  script.js  styles.css  tailwind.config.js  tsconfig.json
frontend-too/: index.html  script.js  styles.css
frontend/.output/: nitro.json
frontend/.output/public/: 200.html  404.html  _payload.json  index.html
frontend/.output/public/_nuxt/: 1luAzyM3.js  5sxdXrRd.js  6uX0v96d.js  8qP-_UfD.js  APpntqsi.js  B-emFjrQ.js  B2rXRiIs.js  B3b575aT.js  B4mcmQk5.js  B6TD6o0w.js  B7zt-npK.js  B8wV0hac.js  BFNwcGBw.js  BHrfoKED.js  BIAgwVVs.js  BLReLmma.js  BMwKft9T.js  BNMHI0I8.js  BPnyn-hM.js  BQhe-Qfm.js  BVqM1PIt.js  BXM74KcS.js  BYca2tBz.js  BZRscYu0.js  B_ORKb8L.js  Bd-2Zaic.js  Bfk5mhW4.js  Bi3Bhp4v.js  Bj_UPKu4.js  BqgQZ3O2.js  Bs1g9LMd.js  Bu9YCDXV.js  Bv_TP76Z.js  C0YSCJ0P.js  C1FAx9O0.js  C2tCLE75.js  C3frKiCu.js  C4YETAYP.js  C5VID9_l.js  C6FQmxNJ.js  (+110 more)
frontend/.output/public/_nuxt/builds/: latest.json
frontend/.output/public/assets/: _payload.json  index.html
frontend/.output/public/telemetry/: _payload.json  index.html
frontend/api/: apiClient.ts  index.ts
frontend/assets/: formConfig.ts
frontend/assets/css/: main.css
frontend/components/: Metrices.vue
frontend/pages/: assets.vue  index.vue  telemetry.vue
frontend/static/: script.js  styles.css
frontend/templates/: index.html
install/: Dockerfile  Dockerfile.Argo  entrypoint.sh  otel-config.yaml  supervisord.conf
paas/components/: secretstore.yaml
sdk/: __init__.py  database.py  models.py  schemas.py
sdk/common/: converter.py
sdk/dto/: preflight.py  workflow.py
sdk/fastapi/routers/: events.py  health.py  logs.py  metrics.py  traces.py  ui.py
sdk/interfaces/: events.py  logs.py  metrics.py  platform.py  traces.py
sdk/models/: __init__.py
sdk/routers/: events.py  logs.py  metrics.py  traces.py
sdk/schemas/: __init__.py
sdk/workflows/: __init__.py
sdk/workflows/sql/: __init__.py  auth.py  metadata.py  preflight_check.py  sql.py  utils.py  worker.py
sdk/workflows/utils/: activity.py
tests/e2e/test_postgres_workflow/: config.yaml  test_postgres_workflow.py
tests/e2e/test_postgres_workflow/schema/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/e2e/test_postgres_workflow/schema/transformed/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/e2e/test_postgres_wwi_workflow/: config.yaml  test_postgres_wwi_workflow.py
tests/e2e/test_postgres_wwi_workflow/schema/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/unit/: test_activities.py  test_platform.py  test_workflow.py
tests/unit/transformers/atlas/: test_postgres_column.py  test_postgres_table.py
tests/unit/transformers/query/: test_sql_transformer.py  test_sql_transformer_output_validation.py
utils/: utils.py
(+27 files in other folders)
