[tool.poetry]
name = "atlan-postgres-app"
version = "0.1.0"
description = ""
authors = ["Atlan Apps Team <apps@atlan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pytest-asyncio = "^0.24.0"
# use local application-sdk repository for development
# application-sdk = { path = "../application-sdk/", develop = true, extras = ["workflows", "iam_auth", "sqlalchemy", "tests"]}
# use remote application-sdk repository
application-sdk = {git = "git@github.com:atlanhq/application-sdk.git", rev = "43cd45a9b766ad1d662c9bac08290c8a94fa791b", extras = ["workflows", "iam_auth", "sqlalchemy", "tests"]}
psycopg = {extras = ["binary"], version = "^3.2.3"}
jinja2 = "^3.1.2"
poetry-plugin-dotenv = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "^5.13.2"
watchdog = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
scalene = "^1.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "tests/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 60
